<resources>
    <string name="app_name">Dagger2RetrofitRecyclerView</string>
    <string name="loginInfo">Welcome to login</string>

    <string name="InfoNameInput">请输入用户名</string>
    <string name="InfoPasswordInput">请输入密码</string>
    <string name="chkLogin">下次自动登录</string>
    <string name="rbtnLogin1">二维码登录</string>
    <string name="rbtnLogin2">邮箱登录</string>
    <string name="btnLogin">登录</string>
    <string name="btnExit">退出</string>
</resources>
